# LoRaEstacaoMeteorologica

./: CMakeLists.txt  EstacaoMeteorologicaRX.c  LeituraSensorTX.c  README.md
inc/: bmp280.c  bmp280.h  lora.c  lora.h  matriz_leds.c
