cmake_minimum_required(VERSION 3.13)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Initialise pico_sdk from installed location
# (note this can come from environment, CMake cache etc)

set(PICO_BOARD pico_w CACHE STRING "Board type")

# Pull in Raspberry Pi Pico SDK (must be before project)
include(pico_sdk_import.cmake)

project(EstacaoMeteorologicaHTML C CXX ASM)

# Initialise the Raspberry Pi Pico SDK
pico_sdk_init()

# Add executable. Default name is the project name, version 0.1

add_executable(EstacaoMeteorologicaHTML 
            LeituraSensorTX.c #TX LoRa, programa que vai enviar os dados dos sensores comunicando com o RX LoRa
            #EstacaoMeteorologicaRX.c #RX LoRa, programa que vai receber os dados do TX LoRa e carregar a pagina WEB
            inc/ssd1306.c inc/matriz_leds.c inc/aht20.c inc/bmp280.c inc/lora.c)

pico_set_program_name(EstacaoMeteorologicaHTML "EstacaoMeteorologicaHTML")
pico_set_program_version(EstacaoMeteorologicaHTML "0.1")

# Generate PIO header
pico_generate_pio_header(EstacaoMeteorologicaHTML ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio)

# Modify the below lines to enable/disable output over UART/USB
pico_enable_stdio_uart(EstacaoMeteorologicaHTML 1)
pico_enable_stdio_usb(EstacaoMeteorologicaHTML 1)

# Add the standard library to the build
target_link_libraries(EstacaoMeteorologicaHTML
        pico_stdlib)

# Add the standard include files to the build
target_include_directories(EstacaoMeteorologicaHTML PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
        ${CMAKE_CURRENT_LIST_DIR}/inc
        ${PICO_SDK_PATH}/lib/lwip/src/include
        ${PICO_SDK_PATH}/lib/lwip/src/include/arch
        ${PICO_SDK_PATH}/lib/lwip/src/include/lwip
)

target_sources(EstacaoMeteorologicaHTML PRIVATE
    ${PICO_SDK_PATH}/lib/lwip/src/apps/http/httpd.c
    ${PICO_SDK_PATH}/lib/lwip/src/apps/http/fs.c
)

# Add any user requested libraries
target_link_libraries(EstacaoMeteorologicaHTML 
        hardware_pio
        hardware_i2c
        hardware_timer
        hardware_clocks
        hardware_spi
        hardware_gpio
        hardware_adc
        hardware_pwm
        pico_cyw43_arch_lwip_threadsafe_background
        )

pico_add_extra_outputs(EstacaoMeteorologicaHTML)